# knowledge-check

./: .gitignore  components.json  debug-paths.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yml  generate-questions.yml
content_generator/: .env.example  list_models.py  pyproject.toml  verify_gemini.py  verify_llm.py
content_generator/scripts/: generate.py
content_generator/src/: __init__.py  config.py  data_exporter.py  llm_client.py  models.py  prompts.py  question_generator.py  tavily_client.py
data/original/: aiagents.json  algorithms.json  postgres.json  python.json  typescript.json
public/data/: topics.json
public/data/original/: aiengineer.json  aws.json  csharp.json  dapper.json  designpatterns.json  sql.json  (+13 more)
src/: App.tsx  index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
src/components/: LoadingFallback.tsx  QuestionNav.tsx  ThemeToggle.tsx  TopicIcon.tsx
src/constants/: topicIcons.ts  topics.ts
src/data/: aiagents.ts  algorithms.ts  aws.ts  designpatterns.ts  grammar.js  grammar.ts  javascript.ts  pandadas.js  pandas.ts  postgres.js  postgres.ts  pronunciation.js  pronunciation.ts  python.ts  react.ts  sql.js  sql.ts  systemdesign.ts  types.ts  typescript.ts
src/hooks/: index.ts  useQuizProgress.ts  useTheme.tsx
src/lib/: api.ts
src/pages/: Home.tsx  Quiz.tsx  Results.tsx  TestSelection.tsx
src/routes/: __root.tsx  index.tsx  quiz.$topicId.$testId.tsx  results.tsx  topic.$topicId.tsx
src/store/: index.ts  quizProgressStore.ts
(+24 files in other folders)
